added => funx for getting book info from user, book image as background for each book element, adjusted size of library element

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Grigor's Library of Books</h1>
+    <button class="add-book">Add A Book</button>
     <ul class="library-display">
-        
+
     </ul>
     <script src="script.js"></script>
 </body>
