changed numPages input type from text to number

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span>Author</span>
                 <span>Number of Pages</span>
                 <span>Read?</span>
-                <span>Delete</span>
+                <span>Edit</span>
             </li>
         </ul>
     </div>
@@ -30,7 +30,7 @@
             <input type="text" id="bookAuthor" name="bookAuthor">
             
             <label for="bookPages">Number of Pages:</label>
-            <input type="text" id="bookPages" name="bookPages">
+            <input type="number" id="bookPages" name="bookPages" min="1">
     
             <input type="radio" id="true" name="readStatus" value="true">
             <label for="true">Read</label>
